--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -265,10 +265,14 @@ layout: default
   
   .api-content table {
     font-size: 0.9em;
+    overflow-x: auto;
+    display: block;
+    white-space: nowrap;
   }
   
   .api-content th, .api-content td {
-    padding: 10px 8px;
+    padding: 8px 6px;
+    font-size: 0.8em;
   }
 }
 </style>
