--- a/docs/_includes/favicon.html
+++ b/docs/_includes/favicon.html
@@ -1,3 +1,8 @@
-<link rel="icon" type="image/png" href="{{ '/assets/risemedia-logo.png' | relative_url }}">
-<link rel="apple-touch-icon" href="{{ '/assets/risemedia-logo.png' | relative_url }}">
-<link rel="shortcut icon" href="{{ '/assets/risemedia-logo.png' | relative_url }}">
+<!-- Favicon -->
+<link rel="icon" type="image/svg+xml" href="/public-api-docs/assets/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="/public-api-docs/assets/risemedia-logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/public-api-docs/assets/risemedia-logo.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/public-api-docs/assets/risemedia-logo.png">
+<link rel="shortcut icon" href="/public-api-docs/assets/favicon.svg">
+<!-- Fallback for older browsers -->
+<link rel="icon" href="/public-api-docs/assets/risemedia-logo.png" type="image/png">
