--- a/docs/_includes/favicon.html
+++ b/docs/_includes/favicon.html
@@ -1,7 +1,8 @@
 <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="/public-api-docs/assets/icon.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/public-api-docs/assets/icon.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/public-api-docs/assets/icon.png">
-<link rel="shortcut icon" href="/public-api-docs/assets/icon.png">
+<link rel="icon" href="{{ '/assets/favicon.svg' | relative_url }}" type="image/svg+xml">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icon.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icon.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icon.png' | relative_url }}">
+<link rel="shortcut icon" href="{{ '/assets/icon.png' | relative_url }}">
 <!-- Fallback for older browsers -->
-<link rel="icon" href="/public-api-docs/assets/icon.png" type="image/png">
+<link rel="icon" href="{{ '/assets/icon.png' | relative_url }}" type="image/png">
