--- a/docs/_includes/favicon.html
+++ b/docs/_includes/favicon.html
@@ -1,8 +1,9 @@
 <!-- Favicon -->
-<link rel="icon" href="{{ '/assets/favicon.svg' | relative_url }}" type="image/svg+xml">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icon.png' | relative_url }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icon.png' | relative_url }}">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icon.png' | relative_url }}">
 <link rel="shortcut icon" href="{{ '/assets/icon.png' | relative_url }}">
 <!-- Fallback for older browsers -->
 <link rel="icon" href="{{ '/assets/icon.png' | relative_url }}" type="image/png">
+<!-- SVG fallback for modern browsers that don't support the above -->
+<link rel="icon" href="{{ '/assets/favicon.svg' | relative_url }}" type="image/svg+xml">
